tests/baselines/reference/subtypingTransitivity.errors.txt
subtypingTransitivity.ts(6,12): error TS2416: Property 'x' in type 'D' is not assignable to the same property in base type 'B'.
  Type 'string' is not assignable to type 'Object'.
subtypingTransitivity.ts(9,12): error TS2416: Property 'x' in type 'D2' is not assignable to the same property in base type 'B'.
  Type 'number' is not assignable to type 'Object'.
subtypingTransitivity.ts(17,1): error TS2322: Type 'D' is not assignable to type 'B'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type 'Object'.
subtypingTransitivity.ts(18,1): error TS2322: Type 'number' is not assignable to type 'Object'.


==== subtypingTransitivity.ts (4 errors) ====
    class B {
        x: Object;
    }
    
    class D extends B {
        public x: string;
               ~
!!! error TS2416: Property 'x' in type 'D' is not assignable to the same property in base type 'B'.
!!! error TS2416:   Type 'string' is not assignable to type 'Object'.
    }
    class D2 extends B {
        public x: number;
               ~
!!! error TS2416: Property 'x' in type 'D2' is not assignable to the same property in base type 'B'.
!!! error TS2416:   Type 'number' is not assignable to type 'Object'.
    }
    
    var b: B;
    var d: D;
    var d2: D2;
    
    d.x = '';
    b = d;
    ~
!!! error TS2322: Type 'D' is not assignable to type 'B'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'Object'.
    b.x = 1; // assigned number to string
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'Object'.
    